Bug 94514 - Using cell names in functions doesn't work if name begins with 3 letters and an underscore
Summary: Using cell names in functions doesn't work if name begins with 3 letters and ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.1.2 release
Hardware: All All
: medium major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.1.0 target:5.0.4 target:5.0.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-09-25 21:52 UTC by harrycovert_68
Modified: 2016-10-25 19:21 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description harrycovert_68 2015-09-25 21:52:41 UTC
When using a cell name beginning with same letters than a real cell address followed by an underscore (ie. matching "[a-zA-Z]{1,3}_.*", "abz_foo1" per example) in a fonction, it's seen as the cell matching the beginning (as "ABZ" per example):
 "=SUM(baz_begin:baz_end)" is seen as "=SUM(BAZ:BAZ)"

 (I know that one can name a range directly, I use a simple case for example).

 It probably worth to notice that if using the cell name directly in a formula it works correctly:
 "= baz_begin + baz_end" is doing the job.

 I put severity as major, because the problem did'nt exist in v4.4, and this can be a problem for who want to migrate, and a bigger one for who already have. Anyway, a possible workaround is to prefix cell names with an underscore before migration, if not to much cell names nor files.

 Hope you'll understand what I meant, as I'm not a native english speaker and the problem is not so simple to explain…

 Thanks for care!
 And mainly thanks for all the great jobs done on LO!

Greetings!
Comment 1 Buovjaga 2015-09-28 12:26:24 UTC
Not reproduced.
I named A1 as baz_begin and A2 as baz_end.
=SUM(baz_begin:baz_end) remains in the correct form.

Maybe test with 5.0.2 to be sure.

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)
Comment 2 harrycovert_68 2015-09-28 13:31:19 UTC
 Sorry for taking a bit of your time, but I mistaked my example, the last valid address with 3 letters seems to be AMJ, so please can you try with anything below amj_.*, SUM(abz_begin:abz_end) per example? Let me know if you can't reproduce it with a valid cell address, and I'll try in LO 5.0.2 as soon as it commes in debian testing.
Comment 3 Buovjaga 2015-09-28 13:47:34 UTC
Thanks, now I could repro :)

If you want to repay the wasted time: https://wiki.documentfoundation.org/QA/Triage_For_Beginners :P
Comment 4 raal 2015-09-30 11:38:52 UTC
Works OK in oldest, latest range in bibisect-win32-5.0, latest:Version: 5.0.0.0.alpha1+
Build ID: ab465b90f6c6da5595393a0ba73f33a1e71a2b65
Comment 5 raal 2015-10-13 14:03:57 UTC
This seems to have begun at the below commit.
Adding Cc: to erack@redhat.com ; Could you possibly take a look at this
one? Thanks

~/bibisect-win32-5.1: e4eebfbc852f48890e13dca6a2aecd9e27c731d6 is the first bad commit
commit e4eebfbc852f48890e13dca6a2aecd9e27c731d6
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Jul 22 16:30:49 2015 -0700

    source 0c8778ce1df92ca3bc2a8dd2f64568fb257e9e39

    source 0c8778ce1df92ca3bc2a8dd2f64568fb257e9e39

:040000 040000 406f68a85a5b57cbd018badcaf94928815b10424 eb1e540dc0196ce0b54cc66533deeff10d0cf6e3 M      instdir

author	Eike Rathke <erack@redhat.com>	2015-06-26 13:12:46 (GMT)
committer	Eike Rathke <erack@redhat.com>	2015-06-26 13:19:52 (GMT)
commit 0c8778ce1df92ca3bc2a8dd2f64568fb257e9e39 (patch)
tdf#44419 allow A:A and 1:1 references also in Calc A1 and ODF syntax
Comment 6 Commit Notification 2015-10-13 16:33:44 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=14bb562b4a8776974391641adcc62ded013ffd2f

Resolves: tdf#94514 more restrictive check on end of column specifier

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Eike Rathke (retired, only occasionally showing up) 2015-10-13 16:50:35 UTC
Pending review
https://gerrit.libreoffice.org/19359 for 5-0
https://gerrit.libreoffice.org/19360 for 5-0-3
Comment 8 Commit Notification 2015-10-14 08:03:31 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=25d385b4f4429b5d079dae6ba8770603e011456d&h=libreoffice-5-0

Resolves: tdf#94514 more restrictive check on end of column specifier

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2015-10-14 12:22:11 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f10d88b436383beebf5cbc7387fa23f6e7d8f919

unit test for tdf#94514

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-10-24 09:14:10 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5430d2a2a642038c149c29350c86f1bee3a4e650&h=libreoffice-5-0-3

Resolves: tdf#94514 more restrictive check on end of column specifier

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 harrycovert_68 2015-12-05 13:21:11 UTC
Problem solved for me.

Thanks a lot!
Comment 12 Robinson Tryon (qubit) 2015-12-17 10:33:20 UTC Comment hidden (obsolete)