Resolves: tdf#94514 more restrictive check on end of column specifier

... needed since we accept A:A entire column notation without the need
of a row number being specified.

Change-Id: I84f6a39e213a4b554e0188e73b4acb34c7a98460